// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Apply Route from Class Should able to apply route from controller 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalsController.get(name) -> GET /animals/:name",
  ],
  Array [],
]
`;

exports[`Apply Route from Class Should able to apply route from controller combine with map 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalsController.get(name) -> GET /animals/:id",
  ],
  Array [],
]
`;

exports[`Apply Route from Class Should able to apply simple route from controller 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalsController.get(name) -> GET /animals/get",
  ],
  Array [],
]
`;

exports[`Extend Route Generator Should able to provide ActionRoutes from Facility 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.method() -> GET /animal/method",
  ],
  Array [
    "2. OtherController.method()  -> GET /other/method",
  ],
  Array [],
]
`;

exports[`Extend Route Generator Should able to provide VirtualRoutes from Facility 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.method() -> GET /animal/method",
  ],
  Array [
    "2. MyFacility                -> GET /other/get",
  ],
  Array [],
]
`;

exports[`Route Generator Should able to provided multiple globs 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [
    "2. CatController.get()     -> GET /kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [
    "5. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [],
]
`;

exports[`Route Generator Should able to provided multiple path 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [
    "2. CatController.get()     -> GET /kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [
    "5. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [],
]
`;

exports[`Route Generator Should able to provided multiple path with absolute 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [
    "2. CatController.get()     -> GET /kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [
    "5. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [],
]
`;

exports[`Route Generator Should able to search all on nested directory 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [
    "2. CatController.get()     -> GET /kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [
    "5. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [],
]
`;

exports[`Route Generator Should able to transform using absolute glob 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [
    "2. CatController.get()     -> GET /kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [
    "5. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [],
]
`;

exports[`Route Generator Should able to transform using relative glob 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [
    "2. CatController.get()     -> GET /kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [
    "5. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [],
]
`;

exports[`Route Generator Should not throw error when specify invalid directory 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "No controller found",
  ],
]
`;

exports[`Route Generator Should not use directoryAsPath with glob 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()   -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get() AnimalController.get()",
  ],
  Array [
    "2. BeastController.get()    -> GET /beast/get",
  ],
  Array [
    "3. CreatureController.get() -> GET /creature/get",
  ],
  Array [
    "4. AnimalController.get()   -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get() AnimalController.get()",
  ],
  Array [
    "5. CatController.get()      -> GET /kitty/get",
  ],
  Array [
    "6. DuckController.get()     -> GET /quack/get",
  ],
  Array [
    "7. ChickenController.get()  -> GET /chicken",
  ],
  Array [
    "8. AnimalController.get()   -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get() AnimalController.get()",
  ],
  Array [],
]
`;

exports[`Route Grouping Should able to combine with default controller path 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()   -> GET /animal/get",
  ],
  Array [
    "2. BeastController.get()    -> GET /beast/get",
  ],
  Array [
    "3. CreatureController.get() -> GET /creature/get",
  ],
  Array [],
  Array [
    "1. AnimalController.get()  -> GET /api/v1/animal/get",
  ],
  Array [
    "2. CatController.get()     -> GET /api/v1/kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [],
  Array [
    "1. AnimalController.get() -> GET /api/v2/animal/get",
  ],
  Array [],
]
`;

exports[`Route Grouping Should able to group routes 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.method() -> GET /api/v1/animal/method",
  ],
  Array [],
  Array [
    "1. AnimalController.method() -> GET /api/v2/animal/method",
  ],
  Array [],
]
`;

exports[`Route Grouping Should able to group routes by providing absolute path 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()  -> GET /api/v1/animal/get",
  ],
  Array [
    "2. CatController.get()     -> GET /api/v1/kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [],
  Array [
    "1. AnimalController.get() -> GET /api/v2/animal/get",
  ],
  Array [],
]
`;

exports[`Route Grouping Should able to group routes by providing relative path 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()  -> GET /api/v1/animal/get",
  ],
  Array [
    "2. CatController.get()     -> GET /api/v1/kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [],
  Array [
    "1. AnimalController.get() -> GET /api/v2/animal/get",
  ],
  Array [],
]
`;

exports[`Route Grouping Should able to ignore nested directory as path 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [
    "2. CatController.get()     -> GET /kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [
    "5. AnimalController.get()  -> GET /animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [],
]
`;

exports[`Route Grouping Should able to ignore nested directory as path with rootPath 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()  -> GET /api/v1/animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [
    "2. CatController.get()     -> GET /api/v1/kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [
    "5. AnimalController.get()  -> GET /api/v1/animal/get
 - error Duplicate route found in AnimalController.get() AnimalController.get()",
  ],
  Array [],
]
`;

exports[`Route Grouping Should use directory tree as route 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get()  -> GET /api/v1/animal/get",
  ],
  Array [
    "2. CatController.get()     -> GET /api/v1/kitty/get",
  ],
  Array [
    "3. DuckController.get()    -> GET /quack/get",
  ],
  Array [
    "4. ChickenController.get() -> GET /chicken",
  ],
  Array [
    "5. AnimalController.get()  -> GET /api/v2/animal/get",
  ],
  Array [],
]
`;

exports[`Route Ignore Should able to ignore class from route generation 1`] = `Array []`;

exports[`Route Ignore Should able to ignore specific methods from class ignore 1`] = `
Array [
  Object {
    "method": "put",
    "url": "/users/:id",
  },
]
`;

exports[`Route Ignore Should able to ignore specific methods from class ignore with multiple root route 1`] = `
Array [
  Object {
    "method": "put",
    "url": "/users/:id",
  },
  Object {
    "method": "put",
    "url": "/clients/:id",
  },
]
`;

exports[`Route Ignore Should able to ignore specific methods from class ignore with multiple route 1`] = `
Array [
  Object {
    "method": "put",
    "url": "/users/:id",
  },
  Object {
    "method": "put",
    "url": "/users/modify",
  },
]
`;

exports[`Route Mapping Route Analysis Should not cause route analysis error 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalsController.get(name) -> GET /animals/:id",
  ],
  Array [],
]
`;

exports[`Route Mapping Route Analysis Should show route analysis issue when misconfigured 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalsController.get(name) -> GET /animals/:id
 - error Route parameters (id) doesn't have appropriate backing parameter",
  ],
  Array [],
]
`;
